# x_ray_tracer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/camera/: camera.cpp  camera.h
src/lights/: arealightsource.h  pointlightsource.h
src/materials/: DielectricPhongMaterial.cpp  DielectricPhongMaterial.h  GlossyMaterial.cpp  GlossyMaterial.h  PhongMaterial.cpp  PhongMaterial.h  ReflectivePhongMaterial.cpp  ReflectivePhongMaterial.h  RefractivePhongMaterial.cpp  RefractivePhongMaterial.h
src/objects/: Cylinder.cpp  Cylinder.h  quadric.cpp  quadric.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/setup/: color.cpp  color.h  lightsource.h  material.h  object.h  random_gen.h  ray.cpp  ray.h  renderengine.cpp  renderengine.h  scene.cpp  scene.h  structs.h  world.cpp  world.h
src/utils/: matrix3D.cpp  matrix3D.h  vector3D.cpp  vector3D.h
